--- a/e-learning-testsp8-06-05/backend/package.json
+++ b/e-learning-testsp8-06-05/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.5.0"
   }
 }
