--- a/e-learning-testsp8-06-05/frontend/package.json
+++ b/e-learning-testsp8-06-05/frontend/package.json
@@ -23,6 +23,7 @@
     "@kolkov/angular-editor": "^1.1.2",
     "@ng-bootstrap/ng-bootstrap": "~5.2.2",
     "@ng-select/ng-select": "^4.0.4",
+    "@types/socket.io-client": "^3.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.3",
     "intl-tel-input": "^17.0.16",
@@ -33,6 +34,7 @@
     "ngx-toastr": "^12.1.0",
     "ngx-ui-switch": "^9.0.0",
     "rxjs": "~6.5.4",
+    "socket.io-client": "^4.5.0",
     "ts-md5": "^1.2.9",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
